--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -24,15 +9,29 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Keyboard-key {
+	display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-grow: 1;
+  border-radius: 10%;
+  padding: 7px 18px;
+  margin: 3px;
+  height: 35px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Keyboard-key.pressed {
+	background-color: white;
+	color: slategray;
+}
+
+.Keyboard-key.released {
+	background-color: slategray;
+	color: white
+}
+
+.Keyboard-row {
+	display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
