--- a/src/App.css
+++ b/src/App.css
@@ -18,20 +18,14 @@
   padding: 7px 18px;
   margin: 3px;
   height: 35px;
-}
-
-.Keyboard-key.pressed {
-	background-color: white;
-	color: slategray;
-}
-
-.Keyboard-key.released {
 	background-color: slategray;
 	color: white
 }
 
 .Keyboard-row {
-	display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+
+}
+
+.Keyboard-grid {
+	
 }
